[package]
name = "bot-api-rust-client"
version = "0.1.0"
authors = ["Li Yuqing <im.yuqlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
toml = "0.5.8"
