[package]
name = "bot-api-rust-client"
version = "0.1.0"
authors = ["Li Yuqing <im.yuqlee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
toml = "0.5.8"
base64 = "0.13.0"
jwt-simple = "0.10.4"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
sha2 = "0.9.5"
coarsetime = "0.1.19"
